--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             <div class="text-center">
                 <h2>Contact Me</h2>
                 <hr class="colored">
-                <p>Let's have a conversationa about your organization and see if we are a good match.</p>
+                <p>Let's have a conversation about your organization and see if we are a good match.</p>
             </div>
             <div class="row mt-4">
                 <div class="col-lg-8 offset-lg-2">
@@ -590,21 +590,21 @@
                         <div class="row control-group">
                             <div class="form-group col-12 floating-label-form-group controls">
                                 <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" name="name" required data-validation-required-message="Please enter your name.">
+                                <input type="text" class="form-control" placeholder="Name"  name="name" required data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-12 floating-label-form-group controls">
                                 <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" name="email" required data-validation-required-message="Please enter your email address.">
+                                <input type="email" class="form-control" placeholder="Email Address" name="email" required data-validation-required-message="Please enter your email address.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-12 floating-label-form-group controls">
                                 <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <textarea rows="5" class="form-control" placeholder="Message" name="message" required data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
