--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             </div>
             <div class="row mt-4">
                 <div class="col-lg-8 offset-lg-2">
-                    <form name="sentMessage" id="contactForm" action="http://formspree.io/bogannathan@gmail.com" novalidate>
+                    <form name="sentMessage" id="contactForm" method="post" action="http://formspree.io/bogannathan@gmail.com" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-12 floating-label-form-group controls">
                                 <label>Name</label>
