--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
     <script src="vendor/wowjs/wow.min.js"></script>
 
     <!-- Contact form JavaScript -->
-    <script src="js/contact_me.js"></script>
+    <!-- <script src="js/contact_me.js"></script> -->
     <script src="js/jqBootstrapValidation.js"></script>
 
     <!-- Custom scripts for this theme -->
