--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <div class="controls mt-3">
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter="all">All</button>
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".identity">Identity</button>
-                <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".graphic">Graphic</button>
+                <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".JavaScript">JavaScript</button>
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".cssProjects">CSS</button>
             </div>
             <div class="portfolio-grid clearfix" id="portfolioList">
@@ -401,13 +401,12 @@
                     </div>
                 </div>
                 <!-- Grid Item 3 -->
-                <div class="mix web" href="img/agency/portfolio/grid/grid-3.jpg" title="Client Name">
-                    <div class="portfolio-wrapper">
-                        <img src="img/agency/portfolio/grid/grid-3.jpg" alt="">
+                <div class="mix JavaScript" href="img/github.jpg" title="Client Name">
+                    <div class="portfolio-wrapper"><a href="https://github.com/bogannathan/JavaScript2017jsFundamentals" target="_blank">
+                        <img src="img/github.jpg" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">Client Name</a>
-                                <span class="text-category">Web Development</span>
+                                <a class="text-title">Github for JavaScript Fundamentals</a>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
