--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                     </div>
                 </div>
                 <!-- Grid Item 2 -->
-                <div class="mix cssProjects" href="img/meeseeks2.jpg" title="Client Name">
+                <div class="mix cssProjects" href="img/meeseeks2.JPG" title="Client Name">
                     <div class="portfolio-wrapper"><a href="https://codepen.io/bogannathan/pen/RZjpPM" target="_blank">
-                        <img src="img/meeseeks2.jpg" alt=""></a>
+                        <img src="img/meeseeks2.JPG" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
                                 <a class="text-title">CSS Design</a>
