--- a/index.html
+++ b/index.html
@@ -414,12 +414,11 @@
                 </div>
                 <!-- Grid Item 4 -->
                 <div class="mix identity" href="img/agency/portfolio/grid/grid-4.jpg" title="Client Name">
-                    <div class="portfolio-wrapper">
-                        <img src="img/agency/portfolio/grid/grid-4.jpg" alt="">
+                    <div class="portfolio-wrapper"><a href="http://npb-napoleondynamitejeopardy.herokuapp.com/" target="_blank">
+                        <img src="img/napoleonpreview.jpg" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">Client Name</a>
-                                <span class="text-category">Brand Identity</span>
+                                <a class="text-title">Napoleon Dynamite Jeopardy</a>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
