--- a/index.html
+++ b/index.html
@@ -413,9 +413,9 @@
                     </div>
                 </div>
                 <!-- Grid Item 4 -->
-                <div class="mix identity" href="img/agency/portfolio/grid/grid-4.jpg" title="Client Name">
+                <div class="mix identity" href="img/napoleonpreview.JPG" title="Client Name">
                     <div class="portfolio-wrapper"><a href="http://npb-napoleondynamitejeopardy.herokuapp.com/" target="_blank">
-                        <img src="img/napoleonpreview.jpg" alt=""></a>
+                        <img src="img/napoleonpreview.JPG" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
                                 <a class="text-title">Napoleon Dynamite Jeopardy</a>
