updated color and heads-down

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- Uncomment the color scheme you want to use! Red is chosen by default! -->
     <!-- <link href="css/vitality-red.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-aqua.css" rel="stylesheet" type="text/css"> -->
-    <link href="css/vitality-blue.css" rel="stylesheet" type="text/css">
-    <!-- <link href="css/vitality-green.css" rel="stylesheet" type="text/css"> -->
+    <!-- <link href="css/vitality-blue.css" rel="stylesheet" type="text/css"> -->
+    <link href="css/vitality-green.css" rel="stylesheet" type="text/css">
     <!-- <link href="css/vitality-orange.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-pink.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-purple.css" rel="stylesheet" type="text/css"> -->
@@ -169,7 +169,7 @@
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-md-10 offset-md-1">
-                    <span class="quote">Good <span class="text-primary">developers</span> find that perfect balance between head-down <span class="text-primary">coding</span> and <span class="text-primary">collaboration</span>.</span>
+                    <span class="quote">Good <span class="text-primary">developers</span> find that perfect balance between heads-down <span class="text-primary">coding</span> and <span class="text-primary">collaboration</span>.</span>
                     <hr class="colored">
                     <a class="btn btn-primary page-scroll" href="#contact">Email me here</a>
                 </div>
@@ -418,7 +418,7 @@
                         <img src="img/napoleonpreview.JPG" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">Napoleon Dynamite Jeopardy</a>
+                                <a class="text-title">Napoleon Dynamite plays Jeopardy</a>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
