--- a/index.html
+++ b/index.html
@@ -426,12 +426,11 @@
                 </div>
                 <!-- Grid Item 5 -->
                 <div class="mix web" href="img/agency/portfolio/grid/grid-5.jpg" title="Client Name">
-                    <div class="portfolio-wrapper">
-                        <img src="img/agency/portfolio/grid/grid-5.jpg" alt="">
+                    <div class="portfolio-wrapper"><a href="./JS_GAME/index.html">
+                        <img src="img/agency/portfolio/grid/grid-5.jpg" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">Client Name</a>
-                                <span class="text-category">Web Development</span>
+                                <a class="text-title">HTML/JavaScript Game</a>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
