updated html5 game to open in new tab

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 </div>
                 <!-- Grid Item 5 -->
                 <div class="mix web" href="img/agency/portfolio/grid/grid-5.jpg" title="Client Name">
-                    <div class="portfolio-wrapper"><a href="./JS_GAME/index.html">
+                    <div class="portfolio-wrapper"><a href="./JS_GAME/index.html" target="_blank">
                         <img src="img/agency/portfolio/grid/grid-5.jpg" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
