added background for project 5

--- a/index.html
+++ b/index.html
@@ -425,9 +425,9 @@
                     </div>
                 </div>
                 <!-- Grid Item 5 -->
-                <div class="mix web" href="img/agency/portfolio/grid/grid-5.jpg" title="Client Name">
+                <div class="mix web" href="img/html5.jpg" title="Client Name">
                     <div class="portfolio-wrapper"><a href="./JS_GAME/index.html" target="_blank">
-                        <img src="img/agency/portfolio/grid/grid-5.jpg" alt=""></a>
+                        <img src="img/html5.jpg" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
                                 <a class="text-title">HTML/JavaScript Game</a>
