removed filler links in projects

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     </div>
                 </div>
                 <!-- Grid Item 7 -->
-                <div class="mix graphic" href="img/agency/portfolio/grid/grid-7.jpg" title="Client Name">
+                <!-- <div class="mix graphic" href="img/agency/portfolio/grid/grid-7.jpg" title="Client Name">
                     <div class="portfolio-wrapper">
                         <img src="img/agency/portfolio/grid/grid-7.jpg" alt="">
                         <div class="caption">
@@ -461,9 +461,9 @@
                             <div class="caption-bg"></div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Grid Item 8 -->
-                <div class="mix web" href="img/agency/portfolio/grid/grid-8.jpg" title="Client Name">
+                <!-- <div class="mix web" href="img/agency/portfolio/grid/grid-8.jpg" title="Client Name">
                     <div class="portfolio-wrapper">
                         <img src="img/agency/portfolio/grid/grid-8.jpg" alt="">
                         <div class="caption">
@@ -474,9 +474,9 @@
                             <div class="caption-bg"></div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Grid Item 9 -->
-                <div class="mix identity" href="img/agency/portfolio/grid/grid-9.jpg" title="Client Name">
+               <!--  <div class="mix identity" href="img/agency/portfolio/grid/grid-9.jpg" title="Client Name">
                     <div class="portfolio-wrapper">
                         <img src="img/agency/portfolio/grid/grid-9.jpg" alt="">
                         <div class="caption">
@@ -487,7 +487,7 @@
                             <div class="caption-bg"></div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
