--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </nav>
 
     <!-- Masthead -->
-    <header class="masthead" style="background-image: url('img/startingpic.png');">
+    <header class="masthead" style="background-image: url('img/startingpic2.png');">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-12 my-auto text-center text-white">
@@ -100,9 +100,10 @@
             </div>
         </div>
         <div class="scroll-down">
-            <a class="btn page-scroll" href="#about">
-                <i class="fa fa-angle-down fa-fw"></i>
-            </a>
+            <!-- <a class="btn page-scroll" href="#about"> -->
+                <p style="color: white">Scroll down for the good stuff!</p>
+                <!-- <i class="fa fa-angle-down fa-fw"></i> -->
+            <!-- </a> -->
         </div>
     </header>
 
