--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#services">Services</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link page-scroll" href="#process">Process</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#work">Portfolio</a>
                     </li>
