changed p1 carousel backgorund and added fav icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="">
 
     <title>Nathan Bogan</title>
+    <!-- <link rel="shortcut icon" href=""> -->
+    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -255,7 +257,7 @@
     <div class="portfolio-carousel wow fadeIn owl-carousel owl-theme">
 
         <!-- Portfolio Carousel Item 1 -->
-        <div class="item" style="background-image: url('img/golfstorebig.jpg')">
+        <div class="item" style="background-image: url('img/agency/portfolio/carousel/bg-2.jpg')">
             <div class="container-fluid">
                 <div class="row h-100">
                     <div class="col-md-5 push-md-7 my-auto">
@@ -271,7 +273,7 @@
                             <div class="device-mockup macbook portrait black">
                                 <div class="device">
                                     <div class="screen">
-                                        <img class="img-fluid" src="img/golfstorebig.jpg" alt="">
+                                        <img class="img-fluid" src="img/golfstore.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
