updated portfolio sorter

--- a/index.html
+++ b/index.html
@@ -137,28 +137,28 @@
             <div class="row text-center">
                 <div class="col-lg-3 col-md-6">
                     <div class="wow fadeIn px-4 pb-4 pb-lg-0 h-100" data-wow-delay=".2s">
-                        <i class="fa fa-handshake-o fa-4x"></i>
+                        <i class="fa fa-handshake-o fa-2x"></i>
                         <h3>Communicate</h3>
                         <p class="mb-0">Collaborate as needed to make the project successful</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="wow fadeIn px-4 pb-4 pb-lg-0 h-100" data-wow-delay=".4s">
-                        <i class="fa fa-edit fa-4x"></i>
+                        <i class="fa fa-edit fa-2x"></i>
                         <h3>Accept Feedback</h3>
                         <p class="mb-0">Pride has no place in the workplace</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="wow fadeIn px-4 pb-4 pb-lg-0 h-100" data-wow-delay=".6s">
-                        <i class="fa fa-sticky-note fa-4x"></i>
+                        <i class="fa fa-sticky-note fa-2x"></i>
                         <h3>Focus</h3>
                         <p class="mb-0">The big picture comes together when quality pieces are put together</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="wow fadeIn px-4 h-100" data-wow-delay=".8s">
-                        <i class="fa fa-heart fa-4x"></i>
+                        <i class="fa fa-heart fa-2x"></i>
                         <h3>Code with Love</h3>
                         <p class="mb-0">There is nothing better than a day that flies by after being "lost" in the code!</p>
                     </div>
@@ -374,13 +374,13 @@
             <p>Here are some other projects that I've worked on.</p>
             <div class="controls mt-3">
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter="all">All</button>
-                <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".identity">Identity</button>
+                <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".HTML">HTML</button>
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".JavaScript">JavaScript</button>
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".cssProjects">CSS</button>
             </div>
             <div class="portfolio-grid clearfix" id="portfolioList">
                 <!-- Grid Item 1 -->
-                <div class="mix identity" href="./img/golfstorepreview.jpg" title="Client Name">
+                <div class="mix HTML" href="./img/golfstorepreview.jpg" title="Client Name">
                     <div class="portfolio-wrapper"><a href="https://mygolfstore-6069e.firebaseapp.com/" target="_blank">
                         <img src="./img/golfstorepreview.jpg"  alt=""></a>
                         <div class="caption">
@@ -416,7 +416,7 @@
                     </div>
                 </div>
                 <!-- Grid Item 4 -->
-                <div class="mix identity" href="img/napoleonpreview.JPG" title="Client Name">
+                <div class="mix HTML" href="img/napoleonpreview.JPG" title="Client Name">
                     <div class="portfolio-wrapper"><a href="http://npb-napoleondynamitejeopardy.herokuapp.com/" target="_blank">
                         <img src="img/napoleonpreview.JPG" alt=""></a>
                         <div class="caption">
@@ -479,13 +479,13 @@
                     </div>
                 </div> -->
                 <!-- Grid Item 9 -->
-               <!--  <div class="mix identity" href="img/agency/portfolio/grid/grid-9.jpg" title="Client Name">
+               <!--  <div class="mix HTML" href="img/agency/portfolio/grid/grid-9.jpg" title="Client Name">
                     <div class="portfolio-wrapper">
                         <img src="img/agency/portfolio/grid/grid-9.jpg" alt="">
                         <div class="caption">
                             <div class="caption-text">
                                 <a class="text-title">Client Name</a>
-                                <span class="text-category">Brand Identity</span>
+                                <span class="text-category">Brand HTML</span>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
@@ -629,7 +629,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 footer-contact-details">
-                    <h4><i class="fa fa-phone"></i> Call</h4>
+                    <h4><i class="fa fa-phone"></i></h4>
                     <p>317-439-8657</p>
                 </div>
                 <div class="col-md-4 footer-contact-details">
@@ -638,13 +638,13 @@
                         <br>Beverly Hills, CA 90210</p> -->
                 </div>
                 <div class="col-md-4 footer-contact-details">
-                    <h4><i class="fa fa-envelope"></i> Email</h4>
+                    <h4><i class="fa fa-envelope"></i></h4>
                     <p><a href="mailto:mail@example.com">bogannathan@gmail.com</a>
                     </p>
                 </div>
             </div>
             <div class="row footer-social">
-                <div class="col-lg-12">
+                <div class="col-lg-12 footer-contact-details">
                     <ul class="list-inline">
                         <!-- <li class="list-inline-item">
                             <a href="#"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
@@ -654,6 +654,7 @@
                         </li> -->
                         <li class="list-inline-item">
                             <a href="http://www.linkedin.com/in/nathanpbogan" target="_blank"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
+                            <p><a href="http://www.linkedin.com/in/nathanpbogan" target="blank">linkedin.com/in/nathanpbogan</a></p>
                         </li>
                     </ul>
                 </div>
