updated bucketlist app

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     .navbar-toggler {
         z-index: 1;
     }
-    
+
     @media (max-width: 576px) {
         nav > .container {
             width: 100%;
@@ -65,7 +65,7 @@
                 Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                
+
             </a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -440,13 +440,13 @@
                     </div>
                 </div>
                 <!-- Grid Item 6 -->
-                <div class="mix graphic" href="img/agency/portfolio/grid/grid-6.jpg" title="Client Name">
-                    <div class="portfolio-wrapper">
-                        <img src="img/agency/portfolio/grid/grid-6.jpg" alt="">
+                <div class="mix JavaScript" href="img/agency/portfolio/grid/grid-6.jpg" title="Client Name">
+                    <div class="portfolio-wrapper"><a href='https://boganbucketclient.herokuapp.com/' target='blank'>
+                        <img src="img/napoleon.png" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">Client Name</a>
-                                <span class="text-category">Graphic Design</span>
+                                <a class="text-title">React/Redux Bucket List app</a>
+                                <span class="text-category"></span>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
@@ -496,13 +496,13 @@
     </section>
 
     <!-- Testomonials Section -->
-    <section class="page-section testimonials bg-faded">
+    <!-- <section class="page-section testimonials bg-faded">
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
-                    <div class="testimonials-carousel">
+                    <div class="testimonials-carousel"-->
                         <!-- Testimonial Item 1 -->
-                        <div class="item mb-4">
+                        <!-- <div class="item mb-4">
                             <p class="lead">"Working with Vitality was both a valuable and rewarding experience."</p>
                             <hr class="colored">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, temporibus, laborum, dignissimos doloremque corporis alias nostrum recusandae culpa id quisquam harum impedit sed sunt non obcaecati vero ipsam aut fugit?</p>
@@ -520,9 +520,9 @@
                                     <i class="fa fa-star"></i>
                                 </div>
                             </div>
-                        </div>
+                        </div>  -->
                         <!-- Testimonial Item 2 -->
-                        <div class="item mb-4">
+                        <!-- <div class="item mb-4">
                             <p class="lead">"Vitality is a well coded, well documented, and easy to use theme!"</p>
                             <hr class="colored">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem amet rem minus dolorum, facere in soluta explicabo, unde eveniet illo vel, nemo nostrum atque nesciunt facilis quaerat quasi reprehenderit dicta.</p>
@@ -544,7 +544,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     <!-- </section> -->
 
     <!-- Newsletter Signup Call to Action -->
@@ -553,7 +553,7 @@
             <h3 class="m0">Subscribe to our newsletter!</h3>
             <hr class="colored">
             <div class="row">
-                <div class="col-lg-8 offset-lg-2">
+                <div class="col-lg-8 offset-lg-2"-->
                     <!-- MailChimp Signup Form -->
                     <!-- <div id="mc_embed_signup"> -->
                         <!-- Replace the form action in the line below with your MailChimp embed action! Visit the documentation for additional instructions! -->
