--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                     </div>
                 </div>
                 <!-- Grid Item 6 -->
-                <div class="mix JavaScript" href="img/agency/portfolio/grid/grid-6.jpg" title="Client Name">
+                <div class="mix JavaScript" href="img/napoleon.png" title="Client Name">
                     <div class="portfolio-wrapper"><a href='https://boganbucketclient.herokuapp.com/' target='blank'>
                         <img src="img/napoleon.png" alt=""></a>
                         <div class="caption">
