--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                     </div>
                 </div>
                 <!-- Grid Item 6 -->
-                <div class="mix JavaScript" href="img/napoleon.png" title="Client Name">
+                <div class="mix JavaScript" href="img/napoleon.PNG" title="Client Name">
                     <div class="portfolio-wrapper"><a href='https://boganbucketclient.herokuapp.com/' target='blank'>
-                        <img src="img/napoleon.png" alt=""></a>
+                        <img src="img/napoleon.PNG" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
                                 <a class="text-title">React/Redux Bucket List app</a>
