--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
 
         <!-- Portfolio Carousel Item 2 -->
-        <div class="item" style="background-image: url('img/agency/portfolio/carousel/bg-2.jpg')">
+        <div class="item" style="background-image: url('img/devshortcut.PNG')">
             <div class="container-fluid">
                 <div class="row h-100">
                     <div class="col-md-5 push-md-7 my-auto">
@@ -295,7 +295,7 @@
                             <a href="#portfolioModal2" data-toggle="modal" class="btn btn-primary">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-7 pull-md-5 hidden-xs my-auto">
+                    <!-- <div class="col-md-7 pull-md-5 hidden-xs my-auto">
                         <div class="device-container">
                             <div class="device-mockup macbook portrait black">
                                 <div class="device">
@@ -305,7 +305,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -452,19 +452,18 @@
                         </div>
                     </div>
                 </div>
-                <!-- Grid Item 7 -->
-                <!-- <div class="mix graphic" href="img/agency/portfolio/grid/grid-7.jpg" title="Client Name">
-                    <div class="portfolio-wrapper">
-                        <img src="img/agency/portfolio/grid/grid-7.jpg" alt="">
+                <div class="mix vue" href="img/devshortcut.PNG" title="Client Name">
+                    <div class="portfolio-wrapper"><a href='https://boganbucketclient.herokuapp.com/' target='blank'>
+                        <img src="img/devshortcut.PNG" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">Client Name</a>
-                                <span class="text-category">Graphic Design</span>
+                                <a class="text-title">thedevcrowd</a>
+                                <span class="text-category">A Vue.js project.</span>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <!-- Grid Item 8 -->
                 <!-- <div class="mix web" href="img/agency/portfolio/grid/grid-8.jpg" title="Client Name">
                     <div class="portfolio-wrapper">
