--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="col-lg-6 text-center my-auto">
                     <h1>Hi, I'm Nathan Bogan</h1>
                     <hr class="colored">
-                    <p>I am currently an apprentice in Eleven Fifty's Full Stack Javascript Developer program. I am looking forward to starting my new career in software development.</p>
+                    <p>I am a recent graduate from Eleven Fifty's Full Stack Javascript Developer program. I am looking forward to starting my new career in software development.</p>
                     <p>If you are looking for an excellent junior developer to join your team, let's connect!</p>
                 </div>
             </div>
@@ -256,16 +256,71 @@
     <!-- Portfolio Carousel -->
     <div class="portfolio-carousel wow fadeIn owl-carousel owl-theme">
 
+        <!-- Portfolio Carousel Item 3 -->
+        <div class="item" style="background-image: url('img/agency/portfolio/carousel/bg-3.jpg')">
+            <div class="container-fluid">
+                <div class="row h-100">
+                    <div class="col-md-5 push-md-7 my-auto">
+                        <div class="project-details">
+                            <span class="project-name">Student Portal</span>
+                            <span class="project-description">Use test@test.com, password: testing to poke around</span>
+                            <hr class="colored">
+                            <a href="https://student-portal-4e814.firebaseapp.com/"  class="btn btn-primary">View<i class="fa fa-long-arrow-right fa-fw"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-7 pull-md-5 hidden-xs my-auto">
+                        <div class="device-container">
+                            <div class="device-mockup macbook portrait black">
+                                <div class="device">
+                                    <div class="screen">
+                                        <img class="img-fluid" src="img/student-portal.PNG" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Portfolio Carousel Item 1 -->
+        
+        <!-- Portfolio Carousel Item 2 -->
+        <div class="item" style="background-image: url('img/legal/backgrounds/bg-header.jpg')">
+            <div class="container-fluid">
+                <div class="row h-100">
+                    <div class="col-md-5 push-md-7 my-auto">
+                        <div class="project-details">
+                            <span class="project-name">thedevcrowd</span>
+                            <span class="project-description">Forum site based on Vue.js</span>
+                            <hr class="colored">
+                            <a href="https://thedevcrowd.firebaseapp.com" target='blank' class="btn btn-primary">View<i class="fa fa-long-arrow-right fa-fw"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-7 pull-md-5 hidden-xs my-auto">
+                        <div class="device-container">
+                            <div class="device-mockup macbook portrait black">
+                                <div class="device">
+                                    <div class="screen">
+                                        <img class="img-fluid" src='img/devshortcut.PNG' alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="item" style="background-image: url('img/agency/portfolio/carousel/bg-2.jpg')">
             <div class="container-fluid">
                 <div class="row h-100">
                     <div class="col-md-5 push-md-7 my-auto">
                         <div class="project-details">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <span class="project-name">Basic HTML Store</span>
+                            <span class="project-description">Branding, Website Design for faux golf shop</span>
                             <hr class="colored">
-                            <a href="#portfolioModal1" data-toggle="modal" class="btn btn-primary">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
+                            <a href="https://mygolfstore-6069e.firebaseapp.com/" target='blank' class="btn btn-primary">View<i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                     <div class="col-md-7 pull-md-5 hidden-xs my-auto">
@@ -283,70 +338,16 @@
             </div>
         </div>
 
-        <!-- Portfolio Carousel Item 2 -->
-        <div class="item" style="background-image: url('img/devshortcut.PNG')">
-            <div class="container-fluid">
-                <div class="row h-100">
-                    <div class="col-md-5 push-md-7 my-auto">
-                        <div class="project-details">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
-                            <hr class="colored">
-                            <a href="#portfolioModal2" data-toggle="modal" class="btn btn-primary">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                    <!-- <div class="col-md-7 pull-md-5 hidden-xs my-auto">
-                        <div class="device-container">
-                            <div class="device-mockup macbook portrait black">
-                                <div class="device">
-                                    <div class="screen">
-                                        <img class="img-fluid" src="img/agency/portfolio/carousel/screen-2a.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-        </div>
-
-        <!-- Portfolio Carousel Item 3 -->
-        <div class="item" style="background-image: url('img/agency/portfolio/carousel/bg-3.jpg')">
-            <div class="container-fluid">
-                <div class="row h-100">
-                    <div class="col-md-5 push-md-7 my-auto">
-                        <div class="project-details">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
-                            <hr class="colored">
-                            <a href="#portfolioModal3" data-toggle="modal" class="btn btn-primary">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-7 pull-md-5 hidden-xs my-auto">
-                        <div class="device-container">
-                            <div class="device-mockup macbook portrait black">
-                                <div class="device">
-                                    <div class="screen">
-                                        <img class="img-fluid" src="img/agency/portfolio/carousel/screen-3a.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- Portfolio Carousel Item 4 -->
         <div class="item" style="background-image: url('img/agency/portfolio/carousel/bg-4.jpg')">
             <div class="container-fluid">
                 <div class="row h-100">
                     <div class="col-md-5 push-md-7 my-auto">
                         <div class="project-details">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <span class="project-name">Jeopard game, using only jQuery</span>
+                            <span class="project-description">Napoleon Dynamite Theme</span>
                             <hr class="colored">
-                            <a href="#portfolioModal4" data-toggle="modal" class="btn btn-primary">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
+                            <a href="http://npb-napoleondynamitejeopardy.herokuapp.com/" target='blank' class="btn btn-primary">View <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                     <div class="col-md-7 pull-md-5 hidden-xs my-auto">
@@ -354,7 +355,7 @@
                             <div class="device-mockup macbook portrait black">
                                 <div class="device">
                                     <div class="screen">
-                                        <img class="img-fluid" src="img/agency/portfolio/carousel/screen-4.jpg" alt="">
+                                        <img class="img-fluid" src="img/napoleonpreview.JPG" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -371,7 +372,7 @@
         <div class="container text-center wow fadeIn">
             <h2>Portfolio</h2>
             <hr class="colored">
-            <p>Here are some other projects that I've worked on.</p>
+            <p>Here are all the projects that I've worked on recently.</p>
             <div class="controls mt-3">
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter="all">All</button>
                 <button type="button" class="control btn btn-secondary btn-sm mx-2 mb-4" data-filter=".HTML">HTML</button>
@@ -445,38 +446,38 @@
                         <img src="img/napoleon.PNG" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">React/Redux Bucket List app</a>
+                                <a class="text-title">React/Redux YouTube search app</a>
                                 <span class="text-category"></span>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
                     </div>
                 </div>
-                <div class="mix vue" href="img/devshortcut.PNG" title="Client Name">
-                    <div class="portfolio-wrapper"><a href='https://boganbucketclient.herokuapp.com/' target='blank'>
+                <div class="mix JavaScript" href="img/devshortcut.PNG" title="Client Name">
+                    <div class="portfolio-wrapper"><a href='thedevcrowd.firebaseapp.com' target='blank'>
                         <img src="img/devshortcut.PNG" alt=""></a>
                         <div class="caption">
                             <div class="caption-text">
                                 <a class="text-title">thedevcrowd</a>
-                                <span class="text-category">A Vue.js project.</span>
+                                <span class="text-category">A Vue.js project that allows adding categories for forums</span>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
                     </div>
                 </div>
                 <!-- Grid Item 8 -->
-                <!-- <div class="mix web" href="img/agency/portfolio/grid/grid-8.jpg" title="Client Name">
-                    <div class="portfolio-wrapper">
-                        <img src="img/agency/portfolio/grid/grid-8.jpg" alt="">
+                <div class="mix JavaScript" href="img/agency/portfolio/grid/grid-8.jpg" title="Client Name">
+                    <div class="portfolio-wrapper"><a href='https://student-portal-4e814.firebaseapp.com/' target='blank'>
+                        <img src="img/student-portal.PNG" alt=""></a> 
                         <div class="caption">
                             <div class="caption-text">
-                                <a class="text-title">Client Name</a>
-                                <span class="text-category">Web Development</span>
+                                <a class="text-title">Student Portal</a>
+                                <span class="text-category">Angular Student assignment app. Use test@test.com, password testing to look around</span>
                             </div>
                             <div class="caption-bg"></div>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <!-- Grid Item 9 -->
                <!--  <div class="mix HTML" href="img/agency/portfolio/grid/grid-9.jpg" title="Client Name">
                     <div class="portfolio-wrapper">
@@ -573,7 +574,7 @@
                 <!-- </div>
             </div>
         </div>
-    </section> --> -->
+    </section> --> 
 
     <!-- Contact Section -->
     <section class="page-section" id="contact">
