missed target blank

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <span class="project-name">Student Portal</span>
                             <span class="project-description">Use test@test.com, password: testing to poke around</span>
                             <hr class="colored">
-                            <a href="https://student-portal-4e814.firebaseapp.com/"  class="btn btn-primary">View<i class="fa fa-long-arrow-right fa-fw"></i></a>
+                            <a href="https://student-portal-4e814.firebaseapp.com/" target='blank' class="btn btn-primary">View<i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                     <div class="col-md-7 pull-md-5 hidden-xs my-auto">
@@ -344,7 +344,7 @@
                 <div class="row h-100">
                     <div class="col-md-5 push-md-7 my-auto">
                         <div class="project-details">
-                            <span class="project-name">Jeopard game, using only jQuery</span>
+                            <span class="project-name">Jeopardy game, using only jQuery</span>
                             <span class="project-description">Napoleon Dynamite Theme</span>
                             <hr class="colored">
                             <a href="http://npb-napoleondynamitejeopardy.herokuapp.com/" target='blank' class="btn btn-primary">View <i class="fa fa-long-arrow-right fa-fw"></i></a>
