added youtube link

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                     <p>If you are looking for an excellent junior developer to join your team, let's connect!</p>
                 </div>
             </div>
+            <div class='row'>
+                <div class='text-center'><a href='https://www.youtube.com/watch?v=ht2esLYEALU' target='blank'><h2 style='color: blue'>Click here: A walkthrough of my biggest project</h2></a></div>
+            </div>
         </div>
     </section>
 
