updated link to demo

--- a/index.html
+++ b/index.html
@@ -124,7 +124,31 @@
                 </div>
             </div>
             <div class='row'>
-                <div class='text-center'><a href='https://www.youtube.com/watch?v=ht2esLYEALU' target='blank'><h2 style='color: blue'>Click here: A walkthrough of my biggest project</h2></a></div>
+                    <section class="page-section">
+                            <div class="container text-center wow fadeIn">
+                                <div class="portfolio-grid clearfix" id="portfolioList">
+                                    <!-- Grid Item 1 -->
+                                    <div class="mix HTML" href="./img/golfstorepreview.jpg" title="Client Name" style="width: 48%;margin: 1%;">
+                                        <div class="portfolio-wrapper" style="background: transparent"><a href="https://www.youtube.com/watch?v=ht2esLYEALU" target="_blank">
+                                            <img src="./img/videodemo2.JPG" style="height: 500px; width: auto;" alt=""></a>
+                                        </div>
+                                    </div>
+                                    <div class="mix HTML" title="Client Name" style="width: 48%;margin: 1%;">
+                                        <div style="flex-direction: column; flex: 1">
+                                            <div class='text-center' style="flex: 1">
+                                                    <p>Click the image to left to watch a video walk through of my biggest project</p>
+                                                </br>
+                                            </div>
+                                            <div class='text-center' style="flex: 1; justify-content: center">
+                                                <p>If you have downloaded the <a href='https://expo.io/' target='blank'>Expo app </a>you can open and mess around with the app yourself at <a href='https://expo.io/@dudebrogan/fakedate' target='blank'>this link</a></p>
+                                            </br>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                <!-- <div class='text-center'><a href='https://www.youtube.com/watch?v=ht2esLYEALU' target='blank'><h6>Click here: A walkthrough of my biggest project</h6></a></div>
+                <div class='text-center'><h6>That app is built in React Native. If you download the </h6><a href='https://expo.io/' target='blank'><h6>Expo app</h6></a><h6>You can create an account and play around with it by going here: </h6></div> -->
             </div>
         </div>
     </section>
