--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                             <div class="container text-center wow fadeIn">
                                 <div class="portfolio-grid clearfix" id="portfolioList">
                                     <!-- Grid Item 1 -->
-                                    <div class="mix HTML" href="./img/golfstorepreview.jpg" title="Client Name" style="width: 48%;margin: 1%;">
+                                    <div class="mix HTML" title="Video Demo" style="width: 48%;margin: 1%;">
                                         <div class="portfolio-wrapper" style="background: transparent"><a href="https://www.youtube.com/watch?v=ht2esLYEALU" target="_blank">
                                             <img src="./img/videodemo2.JPG" style="height: 500px; width: auto;" alt=""></a>
                                         </div>
                                     </div>
-                                    <div class="mix HTML" title="Client Name" style="width: 48%;margin: 1%;">
+                                    <div class="mix HTML" title="Video demo" style="width: 48%;margin: 1%;">
                                         <div style="flex-direction: column; flex: 1">
                                             <div class='text-center' style="flex: 1">
                                                     <p>Click the image to left to watch a video walk through of my biggest project</p>
                                                 </br>
                                             </div>
                                             <div class='text-center' style="flex: 1; justify-content: center">
-                                                <p>If you have downloaded the <a href='https://expo.io/' target='blank'>Expo app </a>you can open and mess around with the app yourself at <a href='https://expo.io/@dudebrogan/fakedate' target='blank'>this link</a></p>
+                                                <p>If you have an android and have downloaded the <a href='https://expo.io/' target='blank'>Expo app </a>you can open and mess around with the app yourself at <a href='https://expo.io/@dudebrogan/fakedate' target='blank'>this link</a></p>
                                             </br>
                                         </div>
                                     </div>
