fixed expo link description

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     <div class="mix HTML" title="Video demo" style="width: 48%;margin: 1%;">
                                         <div style="flex-direction: column; flex: 1">
                                             <div class='text-center' style="flex: 1">
-                                                    <p>Click the image to left to watch a video walk through of my biggest project</p>
+                                                    <p>Click the image to left to watch a video walk through of my biggest project, built in React Native (JavaScript framework for iOS and android)</p>
                                                 </br>
                                             </div>
                                             <div class='text-center' style="flex: 1; justify-content: center">
