fixed expo link description

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     <!-- Grid Item 1 -->
                                     <div class="mix HTML" title="Video Demo" style="width: 48%;margin: 1%;">
                                         <div class="portfolio-wrapper" style="background: transparent"><a href="https://www.youtube.com/watch?v=ht2esLYEALU" target="_blank">
-                                            <img src="./img/videodemo2.JPG" style="height: 500px; width: auto;" alt=""></a>
+                                            <img src="./img/videodemo2.jpg" style="height: 500px; width: auto;" alt=""></a>
                                         </div>
                                     </div>
                                     <div class="mix HTML" title="Video demo" style="width: 48%;margin: 1%;">
